--- a/Pipfile
+++ b/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 trio = "*"
 pygame = "*"
+pytest = "*"
+pytest-trio = "*"
+hypothesis = "*"
 
 [requires]
 python_version = "3.7"
